--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 			</ul>
 		</nav>
 
-		<img src="assets/scene4.jpg" id="img4">
+		<img src="assets/Scene4.jpg" id="img4">
 		<input style="width:25%" style="height:50%" type="button" value="buy" onclick="window.location.href='https://www.amazon.co.uk/5055060900581-resident-evil-7-biohazard/dp/B01HHEMT1O'"/>
 		<br> 
 
 
-		<img src="assets/scene1.jpg" id="img1">
-		<img src="assets/scene5.jpg" id="img1">
-		<img src="assets/scene6.jpg" id="img1">
+		<img src="assets/Scene1.jpg" id="img1">
+		<img src="assets/Scene5.jpg" id="img1">
+		<img src="assets/Scene6.jpg" id="img1">
 
 		<audio id="background" loop autoplay>
  				 <source  src="Assets/GTAR.mp3" type="audio/mpeg">
