--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<img src="assets/Scene6.jpg" id="img1">
 
 		<audio id="background" loop autoplay>
- 				 <source  src="Assets/GTAR.mp3" type="audio/mpeg">
+ 				 <source  src="assets/GTAR.mp3" type="audio/mpeg">
  		<script src="JS/music.js"></script>
 	</body>
 
